# Django-basic-application

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
PostApp/: apps.py  factories.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
PostApp/migrations/: 0001_initial.py  0002_alter_postimages_image.py  0003_alter_postimages_image.py  0004_rename_image_postimages_image_and_more.py  0005_posts_likes_alter_postimages_image_alter_posts_user.py  0006_remove_posts_likes_postlike.py  0007_posts_tags.py
PostApp/templates/: allPosts.html  createPost.html  userPost.html  userPosts.html
UserApp/: apps.py  decorators.py  factories.py  forms.py  models.py  repositories.py  serializers.py  services.py  signals.py  tokens.py  urls.py  views.py
UserApp/migrations/: 0001_initial.py  0002_alter_users_avatar_alter_users_email.py  0003_alter_users_avatar.py  0004_alter_users_isregistered.py  0005_rename_avatar_users_avatar_and_more.py  0006_alter_users_avatar.py
UserApp/templates/: base.html  editProfile.html  index.html  password_reset.html  password_reset_confirm.html  registration.html  template_reset_password.html  userProfile.html  users.html
djangogramm/: asgi.py  settings.py  urls.py  wsgi.py
post_app/: apps.py  factories.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
post_app/migrations/: 0001_initial.py  0002_alter_postimages_image.py  (+5 more)
user_app/: apps.py  decorators.py  factories.py  forms.py  models.py  repositories.py  serializers.py  services.py  urls.py  views.py
(+13 files in other folders)
